samples/_failures_safe/1761198478_54e5c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_34b9b4e8.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_34b9b4e8.c:162: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_34b9b4e8.c:161:5: error: expected declaration or statement at end of input
  161 |     if
      |     ^~
